@@ -16,6 +16,7 @@
 class config;
 
 #include <string>
+#include <vector>
 
 //basic game configuration information is here.
 namespace game_config
@@ -39,10 +40,11 @@ namespace game_config
 	extern std::string game_icon, game_title, game_logo, title_music, map_image, rightside_image, rightside_image_bot,
 		               moved_energy_image, unmoved_energy_image, partmoved_energy_image,
 					   enemy_energy_image,ally_energy_image,flag_image,
-					   dot_image,cross_image,
-					   foot_left_nw,foot_left_n,foot_right_nw,foot_right_n,
+					   dot_image,cross_image,			   
 					   missile_n_image,missile_ne_image,terrain_mask_image,observer_image,download_campaign_image,
 					   checked_menu_image,unchecked_menu_image;
+
+	extern std::vector<std::string> foot_left_nw,foot_left_n,foot_right_nw,foot_right_n;
 
 	extern int title_logo_x, title_logo_y, title_buttons_x, title_buttons_y, title_buttons_padding, title_tip_x, title_tip_y, title_tip_width, title_tip_padding;
 
