@@ -1,5 +1,6 @@
 CVS HEAD:
  * user interface improvements:
+   * made it so a unit's defense in a terrain is displayed over the terrain when choosing to move the unit
    * added 'Advanced' preferences section with 'binary save files' and 'show combat' as initial options
    * fix editor file chooser when starting directory has many files (#11698)
    * made it so network dialogs show progress of data transfers again
